# purrcast

./: .gitattributes  .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml
artifacts/web-react/: index.html
backend-go/: go.mod  go.sum  server.go
backend-go/api/config/: config.go
backend-go/http/: handler.go  handler_test.go  server.go
backend-go/http/api/config/: config.go  config_test.go
backend-go/http/websocket/: websocket.go
backend-go/hub/: client.go  hub.go  state.go
backend-go/mdns/: mdns.go
backend-go/message/: message.go
backend-go/utility/: utility.go  utility_test.go
backend-go/websocket/: utility.go  websocket.go
blender/: cat_preload.blend  cat_preload.blend1  text_reload.blend
electron-app/: forge.config.ts  package-lock.json  package.json  webpack.renderer.config.ts  webpack.rules.ts
electron-app/scripts/: copy-artifacts.js
electron-app/src/: global.d.ts  index.css  index.html  index.ts  launcher.ts  renderer.ts
launcher-cpp/: CMakeLists.txt
launcher-cpp/health_checker/: IHealthChecker.hpp  InternalHealthChecker.cpp  InternalHealthChecker.hpp  TcpHealthChecker.cpp  TcpHealthChecker.hpp  health_status.hpp  i_health_checker.hpp  internal_health_checker.cpp  internal_health_checker.hpp  tcp_health_checker.cpp  tcp_health_checker.hpp
launcher-cpp/launcher/: App.cpp  Launcher.cpp  Launcher.hpp  app.cpp  launcher.cpp  launcher.hpp
launcher-cpp/logger/: logger_factory.cpp  logger_factory.hpp
launcher-cpp/modules/: IModule.hpp  ModuleDescription.hpp  ModuleStatus.hpp  i_module.hpp  module_description.hpp  module_status.hpp
launcher-cpp/modules/loopback/: AudioLoopbackModule.cpp  AudioLoopbackModule.hpp  IAudioLoopbackModule.hpp  PulseAudioLoopbackModule.cpp  PulseAudioLoopbackModule.hpp  audio_device_info.hpp  audio_loopback_module.cpp  audio_loopback_module.hpp  i_audio_loopback_module.hpp  pulse_audio_loopback_module.cpp  pulse_audio_loopback_module.hpp
launcher-cpp/modules/manager/: ModuleManager.cpp  ModuleManager.hpp  ModuleSession.hpp  module_manager.cpp  module_manager.hpp  module_session.hpp
launcher-cpp/modules/monitor/: MonitorModule.cpp  MonitorModule.hpp  MonitorReportMessage.hpp  MonitorSession.cpp  MonitorSession.hpp  MonitorSessionListener.hpp  monitor_message.hpp  monitor_module.cpp  monitor_module.hpp  monitor_session.cpp  monitor_session.hpp  monitor_session_listener.hpp
launcher-cpp/modules/router/: AudioRouterModule.cpp  AudioRouterModule.hpp  IAudioRouterModule.hpp  audio_router_module.cpp  audio_router_module.hpp  i_audio_router_module.hpp
launcher-cpp/modules/server/: ServerModule.cpp  ServerModule.hpp  server_module.cpp  server_module.hpp
launcher-cpp/modules/snapclient/: SnapclientModule.cpp  SnapclientModule.hpp  snapclient_module.cpp  snapclient_module.hpp
launcher-cpp/modules/snapserver/: SnapserverModule.cpp  SnapserverModule.hpp  snapserver_module.cpp  snapserver_module.hpp
launcher-cpp/modules/test_environment/: TestEnvironmentModule.cpp  TestEnvironmentModule.hpp  test_environment.cpp  test_environment.hpp
launcher-cpp/modules/test_environment/audio_inspector/: FingerpintAudioInspector.cpp  FingerprintAudioInspector.hpp  IAudioInspector.hpp  fingerprint_audio_inspector.cpp  fingerprint_audio_inspector.hpp  i_audio_inspector.hpp
launcher-cpp/modules/test_environment/data/: VerificationReport.hpp  VerificationResult.hpp  VerificationStats.hpp  verification_report.hpp  verification_result.hpp  verification_stats.hpp
launcher-cpp/modules/test_environment/listener/: ProxyAudioSinkListener.cpp  ProxyAudioSinkListener.hpp  proxy_audio_sink_listener.cpp  proxy_audio_sink_listener.hpp
launcher-cpp/services/: i_service.hpp  pulse_audio_mainloop_service.cpp  pulse_audio_mainloop_service.hpp  services.hpp
launcher-cpp/settings/: Settings.hpp  settings.hpp
launcher-cpp/stream/: FIFOAudioSinkStream.cpp  FIFOAudioSinkStream.hpp  FileAudioSinkStream.cpp  FileAudioSinkStream.hpp  IAudioSink.hpp  IAudioSinkStream.hpp  IAudioSource.hpp  IAudioSourceStream.hpp  IAudioStream.hpp  PortAudioSourceStream.cpp  PortAudioSourceStream.hpp  audio_stream_result.hpp  fifo_audio_sink_stream.cpp  fifo_audio_sink_stream.hpp  file_audio_sink_stream.cpp  file_audio_sink_stream.hpp  i_audio_sink.hpp  i_audio_sink_stream.hpp  i_audio_source_stream.hpp  i_audio_stream.hpp  port_audio_source_stream.cpp  port_audio_source_stream.hpp  s_audio_chunk.hpp
launcher-cpp/tests/: AudioLoopbackModuleTests.cpp  AudioRouterModuleTests.cpp  ExecutorTests.cpp  FIFOAudioSinkStreamTests.cpp  InternalHealthCheckerTests.cpp  LinuxProcessTests.cpp  LoggerFactoryTests.cpp  ModuleManagerTests.cpp  PortAudioSourceStreamTests.cpp  PortTests.cpp  PulseMainloopServiceTests.cpp  ServerModuleTests.cpp  ServicesTests.cpp  SnapclientModuleTests.cpp  SnapserverModuleTests.cpp  TCPHealthCheckerTests.cpp  Tests.hpp
launcher-cpp/util/: Port.cpp  i_process.hpp  linux_process.cpp  linux_process.hpp  os_port.cpp  os_port.hpp  os_process.cpp  os_process.hpp  process_info.cpp  process_info.hpp  task_executor.cpp  task_executor.hpp
local/scripts/: clear.sh  launcher.sh  native.sh  restart_pipewire.sh  stats.sh
web-react/: package-lock.json  package.json  tsconfig.json  vite.config.ts
web-react/src/: App.tsx  background.css  glass.css  index.css  main.tsx  mediaSession.ts  snapcontrol.ts  snapstream.ts
web-react/src/about/components/: About.tsx
web-react/src/app/: AppLayout.tsx
web-react/src/assets/js/: background.d.ts  background.js
web-react/src/assets/styles/: appLayout.css  (+6 more)
web-react/src/components/: BackgroundLayer.tsx  Glass.tsx  Group.tsx  MasterPlayerBar.tsx  Shadow.tsx  Sidebar.tsx
web-react/src/constants/: storage.ts
web-react/src/hooks/: useClient.ts  useConfiguration.ts  useControl.ts  useElectron.ts  useLogger.ts  useNavigate.ts  useSnapcast.ts
web-react/src/pages/: Main.tsx  MainPage.tsx  Monitor.tsx  WelcomePage.tsx
web-react/src/services/: ControlService.ts  SnapcastService.ts
web-react/src/store/: configurationSlice.ts  controlSlice.ts  monitorSlice.ts  snapcastSlice.ts  store.ts  userSlice.ts
(+69 files in other folders)
